hphp/test/zend/bad/ext/session/tests/session_status_disabled.php
<?php

echo "*** Testing session_status() : disabled\n";

var_dump(session_status() == PHP_SESSION_DISABLED);

?>